updated cnn ipynb

--- a/hw5/CNN.ipynb
+++ b/hw5/CNN.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: (49000, 3, 32, 32) \n",
+      "y_train: (49000,) \n",
+      "X_val: (1000, 3, 32, 32) \n",
+      "y_val: (1000,) \n",
+      "X_test: (1000, 3, 32, 32) \n",
+      "y_test: (1000,) \n"
+     ]
+    }
+   ],
    "source": [
     "# Load the (preprocessed) CIFAR10 data.\n",
     "\n",
@@ -225,15 +238,113 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Iteration 1 / 9800) loss: 2.554298\n",
+      "(Epoch 0 / 10) train acc: 0.191000; val_acc: 0.188000\n",
+      "(Iteration 101 / 9800) loss: 1.696782\n",
+      "(Iteration 201 / 9800) loss: 1.561632\n",
+      "(Iteration 301 / 9800) loss: 1.421781\n",
+      "(Iteration 401 / 9800) loss: 1.296039\n",
+      "(Iteration 501 / 9800) loss: 1.224853\n",
+      "(Iteration 601 / 9800) loss: 1.431857\n",
+      "(Iteration 701 / 9800) loss: 1.373697\n",
+      "(Iteration 801 / 9800) loss: 1.265976\n",
+      "(Iteration 901 / 9800) loss: 1.360399\n",
+      "(Epoch 1 / 10) train acc: 0.621000; val_acc: 0.559000\n",
+      "(Iteration 1001 / 9800) loss: 1.151324\n",
+      "(Iteration 1101 / 9800) loss: 1.334211\n",
+      "(Iteration 1201 / 9800) loss: 1.325632\n",
+      "(Iteration 1301 / 9800) loss: 1.520138\n",
+      "(Iteration 1401 / 9800) loss: 1.377522\n",
+      "(Iteration 1501 / 9800) loss: 1.126699\n",
+      "(Iteration 1601 / 9800) loss: 1.086022\n",
+      "(Iteration 1701 / 9800) loss: 0.999588\n",
+      "(Iteration 1801 / 9800) loss: 1.133539\n",
+      "(Iteration 1901 / 9800) loss: 0.841272\n",
+      "(Epoch 2 / 10) train acc: 0.609000; val_acc: 0.579000\n",
+      "(Iteration 2001 / 9800) loss: 0.852617\n",
+      "(Iteration 2101 / 9800) loss: 1.217847\n",
+      "(Iteration 2201 / 9800) loss: 1.287319\n",
+      "(Iteration 2301 / 9800) loss: 1.410400\n",
+      "(Iteration 2401 / 9800) loss: 1.044951\n",
+      "(Iteration 2501 / 9800) loss: 0.872303\n",
+      "(Iteration 2601 / 9800) loss: 1.180536\n",
+      "(Iteration 2701 / 9800) loss: 0.876554\n",
+      "(Iteration 2801 / 9800) loss: 1.073418\n",
+      "(Iteration 2901 / 9800) loss: 0.916041\n",
+      "(Epoch 3 / 10) train acc: 0.666000; val_acc: 0.583000\n",
+      "(Iteration 3001 / 9800) loss: 0.832457\n",
+      "(Iteration 3101 / 9800) loss: 1.087507\n",
+      "(Iteration 3201 / 9800) loss: 1.011499\n",
+      "(Iteration 3301 / 9800) loss: 1.191755\n",
+      "(Iteration 3401 / 9800) loss: 1.297588\n",
+      "(Iteration 3501 / 9800) loss: 1.109875\n",
+      "(Iteration 3601 / 9800) loss: 1.058029\n",
+      "(Iteration 3701 / 9800) loss: 1.115168\n",
+      "(Iteration 3801 / 9800) loss: 1.050343\n",
+      "(Iteration 3901 / 9800) loss: 0.810271\n",
+      "(Epoch 4 / 10) train acc: 0.662000; val_acc: 0.607000\n",
+      "(Iteration 4001 / 9800) loss: 1.201376\n",
+      "(Iteration 4101 / 9800) loss: 1.159125\n",
+      "(Iteration 4201 / 9800) loss: 0.906950\n",
+      "(Iteration 4301 / 9800) loss: 1.425803\n",
+      "(Iteration 4401 / 9800) loss: 0.871367\n",
+      "(Iteration 4501 / 9800) loss: 0.801536\n",
+      "(Iteration 4601 / 9800) loss: 1.159920\n",
+      "(Iteration 4701 / 9800) loss: 0.932421\n",
+      "(Iteration 4801 / 9800) loss: 1.188373\n",
+      "(Epoch 5 / 10) train acc: 0.706000; val_acc: 0.625000\n",
+      "(Iteration 4901 / 9800) loss: 1.118532\n",
+      "(Iteration 5001 / 9800) loss: 1.025578\n",
+      "(Iteration 5101 / 9800) loss: 2.186227\n",
+      "(Iteration 5201 / 9800) loss: 1.423240\n",
+      "(Iteration 5301 / 9800) loss: 0.865230\n",
+      "(Iteration 5401 / 9800) loss: 1.032554\n",
+      "(Iteration 5501 / 9800) loss: 0.877204\n",
+      "(Iteration 5601 / 9800) loss: 0.956096\n",
+      "(Iteration 5701 / 9800) loss: 1.324381\n",
+      "(Iteration 5801 / 9800) loss: 1.016059\n",
+      "(Epoch 6 / 10) train acc: 0.657000; val_acc: 0.614000\n",
+      "(Iteration 5901 / 9800) loss: 0.741090\n",
+      "(Iteration 6001 / 9800) loss: 0.824416\n",
+      "(Iteration 6101 / 9800) loss: 0.972654\n",
+      "(Iteration 6201 / 9800) loss: 1.245899\n",
+      "(Iteration 6301 / 9800) loss: 1.112110\n",
+      "(Iteration 6401 / 9800) loss: 1.119808\n",
+      "(Iteration 6501 / 9800) loss: 1.014950\n",
+      "(Iteration 6601 / 9800) loss: 0.879719\n",
+      "(Iteration 6701 / 9800) loss: 0.849032\n"
+     ]
+    }
+   ],
    "source": [
     "# ================================================================ #\n",
     "# YOUR CODE HERE:\n",
     "#   Implement a CNN to achieve greater than 65% validation accuracy\n",
     "#   on CIFAR-10.\n",
     "# ================================================================ #\n",
+    "model = ThreeLayerConvNet(\n",
+    "    weight_scale=0.001,\n",
+    "    hidden_dim=500,\n",
+    "    reg=0.001,\n",
+    "    filter_size=3,\n",
+    "    num_filters=64,\n",
+    "    use_batchnorm=True\n",
+    ")\n",
     "\n",
-    "\n",
+    "solver = Solver(model, data,\n",
+    "                num_epochs=10, batch_size=50,\n",
+    "                update_rule='adam',\n",
+    "                optim_config={\n",
+    "                  'learning_rate': 1e-3,\n",
+    "                },\n",
+    "                lr_decay = 0.99\n",
+    "                verbose=True, print_every=100)\n",
+    "solver.train()\n",
     "# ================================================================ #\n",
     "# END YOUR CODE HERE\n",
     "# ================================================================ #\n"
@@ -244,7 +355,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.subplot(2, 1, 1)\n",
+    "plt.plot(solver.loss_history, 'o')\n",
+    "plt.xlabel('iteration')\n",
+    "plt.ylabel('loss')\n",
+    "\n",
+    "plt.subplot(2, 1, 2)\n",
+    "plt.plot(solver.train_acc_history, '-o')\n",
+    "plt.plot(solver.val_acc_history, '-o')\n",
+    "plt.legend(['train', 'val'], loc='upper left')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
